--- a/public/back/login.html
+++ b/public/back/login.html
@@ -23,15 +23,15 @@
                         <!-- 这个是放入from表单的 -->
                         <form class="form-horizontal">
                                 <div class="form-group">
-                                  <label for="inputEmail3" class="col-sm-3 control-label" >用户名</label>
+                                  <label for="ursename" class="col-sm-3 control-label" >用户名</label>
                                   <div class="col-sm-9">
-                                    <input type="email" class="form-control" id="inputEmail3" placeholder="请输入用户名">
+                                    <input type="text" class="form-control" name="username" id="ursename" placeholder="请输入用户名">
                                   </div>
                                 </div>
                                 <div class="form-group">
-                                  <label for="inputPassword3" class="col-sm-3 control-label" >密码</label>
+                                  <label for="password" class="col-sm-3 control-label" >密码</label>
                                   <div class="col-sm-9">
-                                    <input type="password" class="form-control" id="inputPassword3" placeholder="请输入密码">
+                                    <input type="password" class="form-control" name="password" id="password" placeholder="请输入密码">
                                   </div>
                                 </div>
                             
