--- a/public/back/login.html
+++ b/public/back/login.html
@@ -7,6 +7,8 @@
     <title>Document</title>
     <!-- 首先引入这个boot -->
     <link rel="stylesheet" href="./lib/bootstrap/css/bootstrap.css">
+    <!-- 引入需要验证的CSS结构 -->
+    <link rel="stylesheet" href="./lib/bootstrap-validator/css/bootstrapValidator.css">
     <!-- 然后引入自己写的样式 -->
     <link rel="stylesheet" href="./css/common.css">
 </head>
@@ -54,6 +56,8 @@
     <script src="./lib/jquery/jquery.js"></script>
     <!-- 然后在引入bootjs -->
     <script src="./lib/bootstrap/js/bootstrap.js"></script>
+    <!-- 引入这个要验证的插件的JS -->
+    <script src="./lib/bootstrap-validator/js/bootstrapValidator.js"></script>
     <!-- 最后在引入自己要写的JS -->
     <script src="./js/common.js"></script>
     <script src="./js/login.js"></script>
