加载写好了

--- a/public/back/login.html
+++ b/public/back/login.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="./lib/bootstrap/css/bootstrap.css">
     <!-- 引入需要验证的CSS结构 -->
     <link rel="stylesheet" href="./lib/bootstrap-validator/css/bootstrapValidator.css">
+    <!-- 引入写加载幻的软件 -->
+    <link rel="stylesheet" href="./lib/nprogress/nprogress.css">
     <!-- 然后引入自己写的样式 -->
     <link rel="stylesheet" href="./css/common.css">
 </head>
@@ -58,6 +60,8 @@
     <script src="./lib/bootstrap/js/bootstrap.js"></script>
     <!-- 引入这个要验证的插件的JS -->
     <script src="./lib/bootstrap-validator/js/bootstrapValidator.js"></script>
+    <!-- 引入加载环的JS -->
+    <script src="./lib/nprogress/nprogress.js"></script>
     <!-- 最后在引入自己要写的JS -->
     <script src="./js/common.js"></script>
     <script src="./js/login.js"></script>
