--- a/back/second.html
+++ b/back/second.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 <head>
   <meta charset="UTF-8">
-  <title>乐淘管理系统-首页</title>
+  <title>乐淘管理系统-二级分类</title>
   <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.css">
   <link rel="stylesheet" href="lib/bootstrap-validator/css/bootstrapValidator.css">
   <link rel="stylesheet" href="lib/nprogress/nprogress.css">
@@ -32,9 +32,9 @@
           <span class="glyphicon glyphicon-list"></span>
           分类管理
         </a>
-        <div class="child" style="display: none">
-          <a  href="first.html">一级分类</a>
-          <a href="second.html">二级分类</a>
+        <div class="child" style="display: block">
+          <a href="first.html">一级分类</a>
+          <a class="now" href="second.html">二级分类</a>
         </div>
       </li>
       <li>
@@ -60,15 +60,13 @@
     <!--面包屑导航-->
     <ol class="breadcrumb">
       <li><a href="#">管理系统</a></li>
-      <li class="active">首页</li>
+      <li><a href="#">分类管理</a></li>
+      <li class="active">二级分类</li>
     </ol>
 
 
     <!--内容区域-->
-    <div class="lt_content">
-      <div class="pic_left pull-left">11</div>
-      <div class="pic_right pull-right">22</div>
-    </div>
+    <div class="lt_content"></div>
   </div>
 
 </div>
@@ -100,7 +98,6 @@
 <script src="lib/bootstrap/js/bootstrap.js"></script>
 <script src="lib/bootstrap-validator/js/bootstrapValidator.js"></script>
 <script src="lib/nprogress/nprogress.js"></script>
-<script src="lib/echarts/echarts.min.js"></script>
 <script src="js/common.js"></script>
 <script src="js/index.js"></script>
 </body>
