--- a/back/user.html
+++ b/back/user.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 <head>
   <meta charset="UTF-8">
-  <title>乐淘管理系统-首页</title>
+  <title>乐淘管理系统-用户管理</title>
   <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.css">
   <link rel="stylesheet" href="lib/bootstrap-validator/css/bootstrapValidator.css">
   <link rel="stylesheet" href="lib/nprogress/nprogress.css">
@@ -22,7 +22,7 @@
   <div class="nav">
     <ul>
       <li>
-        <a href="user.html">
+        <a class="now" href="user.html">
           <span class="glyphicon glyphicon-user"></span>
           用户管理
         </a>
@@ -60,15 +60,12 @@
     <!--面包屑导航-->
     <ol class="breadcrumb">
       <li><a href="#">管理系统</a></li>
-      <li class="active">首页</li>
+      <li class="active">用户管理</li>
     </ol>
 
 
     <!--内容区域-->
-    <div class="lt_content">
-      <div class="pic_left pull-left">11</div>
-      <div class="pic_right pull-right">22</div>
-    </div>
+    <div class="lt_content"></div>
   </div>
 
 </div>
@@ -100,7 +97,6 @@
 <script src="lib/bootstrap/js/bootstrap.js"></script>
 <script src="lib/bootstrap-validator/js/bootstrapValidator.js"></script>
 <script src="lib/nprogress/nprogress.js"></script>
-<script src="lib/echarts/echarts.min.js"></script>
 <script src="js/common.js"></script>
 <script src="js/index.js"></script>
 </body>
