--- a/public/back/login.html
+++ b/public/back/login.html
@@ -14,7 +14,7 @@
     <!-- 然后引入自己写的样式 -->
     <link rel="stylesheet" href="./css/common.css">
 </head>
-<body>
+<body class="body_bg">
     <!-- 然后在这个里面开始要写栅格 -->
     <div class="container">
         <div class="col-md-4 col-md-offset-4">
