--- a/public/back1/back/second.html
+++ b/public/back1/back/second.html
@@ -181,11 +181,12 @@
 </script>
 
 
-<script type="text/html" id="tpl2">
+<script type="text/html" id ='tpl2'>
   {{each rows v i}}
   <li><a data-id="{{v.id}}" href="javascript:;">{{v.categoryName}}</a></li>
   {{/each}}
 </script>
+
 
 <script src="lib/jquery/jquery.js"></script>
 <script src="lib/jquery-fileupload/jquery.ui.widget.js"></script>
