--- a/public/back/second.html
+++ b/public/back/second.html
@@ -146,6 +146,8 @@
                   <h4 class="modal-title">添加分类</h4>
                 </div>
                 <div class="modal-body">
+
+                  <!-- 这个是个form表单 -->
                   <form id="form">
                     <div class="form-group">
                       <div class="dropdown">
@@ -155,8 +157,7 @@
                         </button>
                         <input type="hidden" name="categoryId">
                         <ul class="dropdown-menu">
-                          <!--再挖个坑-->
-                          
+                          <!--动态生成的Li-->
                         </ul>
                       </div>
                     </div>
@@ -166,18 +167,24 @@
                     <div class="form-group">
                       <div class="fileupload_box">
                         <button class="btn btn-default">上传图片</button>
+                        <!-- 这个是用的文件域名。 -->
                         <input type="file" class="btn btn-default" id="fileupload" name="pic1" data-url="/category/addSecondCategoryPic">
                       </div>
                     </div>
                     <div class="form-group img_box">
                       <img src="images/none.png" width="100" height="100" alt="">
-                      <!-- <input type="hidden" name="brandLogo"> -->
+                      <!-- 这个是要使用隐藏域发送数据到后台的 -->
+                      <input type="hidden" name="brandLogo">
                     </div>
+                   
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+                        <!-- 这个里面添加不了， -->
+                        <button type="submit" form ='form' class="btn btn-primary">添加</button>
+                        <!-- 要在这里加入一个隐藏域，Hot字体给服务器 -->
+                        <input type="hidden" name ='hot' value ='0'  >
                   </form>
                 </div>
-                <div class="modal-footer">
-                  <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
-                  <button type="submit" form="form" class="btn btn-primary">添加</button>
                 </div>
               </div>
             </div>
@@ -186,6 +193,9 @@
 
 
 <script src="./lib/jquery/jquery.js"></script>
+<!-- 在这里引入要图片的插件 -->
+<script src="lib/jquery-fileupload/jquery.ui.widget.js"></script>
+<script src="lib/jquery-fileupload/jquery.fileupload.js"></script>
 <!-- 然后在引入bootjs -->
 <script src="./lib/bootstrap/js/bootstrap.js"></script>
 <!-- 引入这个要验证的插件的JS -->
